Fix overlow to overflow in div#g-holder

--- a/views/styles.scss
+++ b/views/styles.scss
@@ -23,7 +23,7 @@ h1 {
 
 div#g-holder { 
     height: 300px; 
-    overlow: hidden; 
+    overflow: hidden; 
     background: white url('/gal-BG.png') no-repeat; }
 
 a.button {
